test/MC/SVE/regression-tests/negative_tests/sve-stnt1d-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU64CStoreNT8LSSZ
// Offset register Rm cannot be xzr
stnt1d z30.d, p3, [x1, xzr, lsl #3]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
